--- a/source/styles/variables.styl
+++ b/source/styles/variables.styl
@@ -1,11 +1,9 @@
 // fonts
-$font-family = "Open Sans", sans-serif
+font-default  = "Open Sans", sans-serif
+
+// category colors
+categories    = man #8B93B2, woman #E06C76, geek #FCAC24, culture #91517D, sport #6ABB8B, house #999999
 
 // colors
-$softgrey = #CCC
-$grey = #666
-$darkgrey = #333
+color-default = #5B323E
 
-$softblue = #008DFD
-$blue = #0370EA
-$darkblue = #076BD2
