--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,1 +1,151 @@
-@charset "utf-8";html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,a,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;vertical-align:baseline}body{line-height:1}article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}ins{background-color:#ff9;color:#000;text-decoration:none}img{-ms-interpolation-mode:bicubic;vertical-align:middle}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:700}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted #000;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}em{font-style:normal;font-weight:700}input,select{vertical-align:middle}.vhidden{position:absolute;text-align:left;direction:ltr;left:-9999em;height:1px}.clearfix:before,.clearfix:after{content:"\0020";display:block;height:0;visibility:hidden}.clearfix:after{clear:both}.clearfix{zoom:1}#skiplinks{position:absolute;left:-9999px}@-moz-viewport{width:device-width}@-webkit-viewport{width:device-width}@-o-viewport{width:device-width}@-ms-viewport{width:device-width}@viewport{width:device-width}@media print{*{background:transparent!important;color:#000!important;text-shadow:none!important}a,a:visited{color:#444!important;text-decoration:underline}a[href]:after{content:" (" attr(href)")"}abbr[title]:after{content:" (" attr(title)")"}.ir a:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}@page{margin:.5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
+@charset "utf-8";
+@media (grifo) {
+/*  
+         _|_|_|            _|      _|_|                
+       _|        _|  _|_|        _|        _|_|         
+       _|  _|_|  _|_|      _|  _|_|_|_|  _|    _|       
+       _|    _|  _|        _|    _|      _|    _|       
+         _|_|_|  _|        _|    _|        _|_|                  
+*/
+}
+ 
+/* CSS reset */
+html,body,div,span,object,iframe,
+h1,h2,h3,h4,h5,h6,p,blockquote,a,pre,
+abbr,address,cite,code,
+del,dfn,em,img,ins,kbd,q,samp,
+small,strong,sub,sup,var,
+b,i,dl,dt,dd,ol,ul,li,
+fieldset,form,label,legend,
+table,caption,tbody,tfoot,thead,tr,th,td,
+article,aside,canvas,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section,summary,
+time,mark,audio,video{margin:0;padding:0;border:0;
+font-size:100%;vertical-align:baseline;}
+body{line-height:1;}
+article,aside,canvas,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section,summary{display:block;}
+ol,ul{list-style:none;}
+blockquote,q{quotes:none;}
+blockquote:before,blockquote:after,
+q:before,q:after{content:'';content:none;}
+ins{background-color:#ff9;color:#000;text-decoration:none;}
+img{-ms-interpolation-mode: bicubic;vertical-align:middle;}
+mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold;}
+del{text-decoration:line-through;}
+abbr[title],dfn[title]{border-bottom:1px dotted #000;cursor:help;}
+table{border-collapse:collapse;border-spacing:0;}
+hr{display:block;height:1px;border:0;border-top:1px solid #cccccc;margin:1em 0;padding:0;}
+em{font-style:normal;font-weight:700;}
+input,select{vertical-align:middle;}
+
+.vhidden {
+    position:absolute;
+    text-align:left;
+    direction:ltr;
+    left:-9999em;
+    height:1px;
+}
+
+/* >> The Magnificent CLEARFIX: Updated to prevent margin-collapsing on child elements << j.mp/bestclearfix */
+.clearfix:before, .clearfix:after {
+  content: "\0020"; display: block; height: 0; visibility: hidden; 
+}
+ 
+.clearfix:after { clear: both; }
+/* Fix clearfix: blueprintcss.lighthouseapp.com/projects/15318/tickets/5-extra-margin-padding-bottom-of-page */
+.clearfix { zoom: 1; }
+#skiplinks {
+  position: absolute;
+  left: -9999px;
+}
+body {
+  width: 960px;
+  margin: 0 auto;
+  background: #f5f5f5;
+}
+.category-man {
+  color: #8b93b2;
+}
+.category-woman {
+  color: #e06c76;
+}
+.category-geek {
+  color: #fcac24;
+}
+.category-culture {
+  color: #91517d;
+}
+.category-sport {
+  color: #6abb8b;
+}
+.category-house {
+  color: #999;
+}
+header h1 {
+  float: left;
+  width: 29.166666666666668%;
+  margin-left: 1.0416666666666665%;
+  margin-right: 1.0416666666666665%;
+  height: 100px;
+  margin: 50px 0;
+  text-indent: 101%;
+  white-space: nowrap;
+  overflow: hidden;
+  background-image: url("../images/presenteria.png");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+nav {
+  display: none;
+}
+nav a {
+  text-decoration: none;
+}
+nav .category-man {
+  border-bottom: 1px solid #c8ccdb;
+}
+nav .category-woman {
+  border-bottom: 1px solid #f2c0c5;
+}
+nav .category-geek {
+  border-bottom: 1px solid #fdd289;
+}
+nav .category-culture {
+  border-bottom: 1px solid #be8aae;
+}
+nav .category-sport {
+  border-bottom: 1px solid #b0dbc2;
+}
+nav .category-house {
+  border-bottom: 1px solid #ccc;
+}
+@-moz-viewport {
+  width: device-width;
+}
+@-webkit-viewport {
+  width: device-width;
+}
+@-o-viewport {
+  width: device-width;
+}
+@-ms-viewport {
+  width: device-width;
+}
+@viewport {
+  width: device-width;
+}
+
+@media print {
+    * { background: transparent !important; color: black !important; text-shadow: none !important; } /* Black prints faster: sanbeiji.com/archives/953 */
+    a, a:visited { color: #444 !important; text-decoration: underline; }
+    a[href]:after { content: " (" attr(href) ")"; }
+    abbr[title]:after { content: " (" attr(title) ")"; }
+    .ir a:after { content: ""; }  /* Don't show links for images */
+    pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
+    thead { display: table-header-group; } /* css-discuss.incutio.com/wiki/Printing_Tables */
+    tr, img { page-break-inside: avoid; }
+    @page { margin: 0.5cm; }
+    p, h2, h3 { orphans: 3; widows: 3; }
+    h2, h3{ page-break-after: avoid; }
+}
