--- a/source/styles/variables.styl
+++ b/source/styles/variables.styl
@@ -1,9 +1,9 @@
 // fonts
-font-default  = "Open Sans", sans-serif
-
-// category colors
-categories    = man #8B93B2, woman #E06C76, geek #FCAC24, culture #91517D, sport #6ABB8B, house #999999
+font-default  = "Helvetica Neue", "Helvetica", Arial, sans-serif
 
 // colors
 color-default = #5B323E
+
+// category colors
+categories    = man #8B93B2, woman #E06C76, geek #FCAC24, culture #91517D, sport #6ABB8B, house #999999
 
