--- a/source/styles/main.styl
+++ b/source/styles/main.styl
@@ -23,6 +23,9 @@ body
     font-family: font-default
     color: color-default
 
+#content
+    clear:both
+
 // -. .-. CATEGORY COLORS .-. .-.
 
 for category, i in categories
