partial gift style

--- a/source/styles/main.styl
+++ b/source/styles/main.styl
@@ -87,5 +87,38 @@ nav
             background: url("../images/vendors/thinkgeek.png") no-repeat
     .price
         float: right
-    img
-        width: 100%;
+    .photo
+        background-color: white
+        width: 100%
+        /*
+        // Gotta do dis work later! :)
+        // http://www.sitepoint.com/pure-css3-paper-curl/
+        
+        &:before, &:after
+            position: absolute;
+            width: 40%;
+            height: 10px;
+            content: ' ';
+            left: 12px;
+            bottom: 12px;
+            background: transparent;
+            -webkit-transform: skew(-5deg) rotate(-5deg);
+            -moz-transform: skew(-5deg) rotate(-5deg);
+            -ms-transform: skew(-5deg) rotate(-5deg);
+            -o-transform: skew(-5deg) rotate(-5deg);
+            transform: skew(-5deg) rotate(-5deg);
+            -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+            -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+            z-index: -1;
+        &:after
+            left: auto;
+            right: 12px;
+            -webkit-transform: skew(5deg) rotate(5deg);
+            -moz-transform: skew(5deg) rotate(5deg);
+            -ms-transform: skew(5deg) rotate(5deg);
+            -o-transform: skew(5deg) rotate(5deg);
+            transform: skew(5deg) rotate(5deg);
+        */
+        img
+            width: 100%
