awesome paper shadow :)

--- a/source/styles/main.styl
+++ b/source/styles/main.styl
@@ -90,10 +90,9 @@ nav
     .photo
         background-color: white
         width: 100%
-        /*
-        // Gotta do dis work later! :)
+        position: relative
+        margin-bottom: 1em
         // http://www.sitepoint.com/pure-css3-paper-curl/
-        
         &:before, &:after
             position: absolute;
             width: 40%;
@@ -119,6 +118,5 @@ nav
             -ms-transform: skew(5deg) rotate(5deg);
             -o-transform: skew(5deg) rotate(5deg);
             transform: skew(5deg) rotate(5deg);
-        */
         img
             width: 100%
