--- a/source/styles/main.styl
+++ b/source/styles/main.styl
@@ -1,4 +1,4 @@
-@import "nib"
+@import 'nib'
 
 // http://dev.w3.org/csswg/css-device-adapt/#the-atviewport-rule
 // http://dev.opera.com/articles/view/an-introduction-to-meta-viewport-and-viewport
@@ -6,10 +6,10 @@
     width: device-width
 
 // -. .-. MIXINS & VARIABLES .-. .-.
-@import "mixins.styl"
-@import "variables.styl"
+@import 'mixins.styl'
+@import 'variables.styl'
 
-@import "grid.styl"
+@import 'grid.styl'
 
 // -. .-. SKIP LINKS .-. .-.
 #skiplinks
@@ -23,24 +23,22 @@ body
     font-family: font-default
     color: color-default
 
-// -. .-. CATEGORY COLORS .-. .-.
+// -. .-. TAGS COLORS .-. .-.
 
-for category, i in categories
-    {".category." + category[0]}
-        color: category[1]
+tags-color-in-prop(color)
 
 header, nav
-    .category
+    tags-color-in-prop(border-bottom-color, .3)
+    .tag
         text-decoration: none
         font-weight: 700
         height: 1.3em
         padding-bottom: -2px
         display: inline-block
-    for category, i in categories
-        {".category." + category[0]}
-            border-bottom: 1px solid rgba(category[1], 20%)
-            &:hover
-                color: rgba(category[1], 80%)
+        border-bottom: 1px solid
+        for tag, i in tags
+            {'&.' + tag[0] + ':hover'}
+                 color: rgba(tag[1], 80%)
 
 // -. .-. HEADER .-. .-.
 
@@ -49,14 +47,15 @@ header
         column: 5
         height: 100px
         margin: 50px 0
-        replace-text: url(../images/presenteria.png)
+        replace-text: url('../images/presenteria.png')
     .side
         float: right
+        font-size: 1.1em
     .intro
         margin-top: 40px
         text-align: right
         line-height: 1.5
-    .category
+    .tag
         font-size: 1.3em
     .share
         margin-top: 20px
@@ -72,51 +71,97 @@ nav
 // -. .-. CONTENT .-. .-.
 
 #content
-    clear:both
+    clear: both
 
 .gift
     column: 4
-    display: inline-block
+    position: relative
+    .product
+        color: color-default
+        text-decoration: none
+    img
+        width: 100%
     .vendor
         float: right
+    .store
         hide-text()
+        display: inline-block
         width: 16px
         height: 16px
-        margin-right: 5px
+        margin-right: 2px
         &.thinkgeek
-            background: url("../images/vendors/thinkgeek.png") no-repeat
+            background: url('../images/vendors/thinkgeek.png')
     .price
-        float: right
+        display: inline-block
+        font-weight: 700       
     .photo
         background-color: white
         width: 100%
         position: relative
         margin-bottom: 1em
-        // http://www.sitepoint.com/pure-css3-paper-curl/
-        &:before, &:after
-            position: absolute;
-            width: 40%;
-            height: 10px;
-            content: ' ';
-            left: 12px;
-            bottom: 12px;
-            background: transparent;
-            -webkit-transform: skew(-5deg) rotate(-5deg);
-            -moz-transform: skew(-5deg) rotate(-5deg);
-            -ms-transform: skew(-5deg) rotate(-5deg);
-            -o-transform: skew(-5deg) rotate(-5deg);
-            transform: skew(-5deg) rotate(-5deg);
-            -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-            -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-            z-index: -1;
-        &:after
-            left: auto;
-            right: 12px;
-            -webkit-transform: skew(5deg) rotate(5deg);
-            -moz-transform: skew(5deg) rotate(5deg);
-            -ms-transform: skew(5deg) rotate(5deg);
-            -o-transform: skew(5deg) rotate(5deg);
-            transform: skew(5deg) rotate(5deg);
-        img
-            width: 100%
+
+    .tags
+        position: absolute
+        top: 4px
+        left: 4px
+        li
+            float: left
+            margin-right: 3px
+    .tag
+        font-size: 0
+        line-height: 0
+        display: block
+        width: 6px
+        height: 6px
+        overflow: hidden
+        text-decoration: none
+
+    tags-color-in-prop(background)
+
+    &:hover
+        .photo
+            z-index: 100
+        .tags
+            transition: top .1s ease-out
+            top: -28px
+
+        .tag
+            transition: height .1s ease-out
+            height: 28px
+            width: auto
+            line-height: 28px
+            font-size: 1em
+            padding: 0 10px
+
+        tags-color-in-prop(background, .2)
+
+
+
+
+    // http://www.sitepoint.com/pure-css3-paper-curl/
+    // &:before, &:after
+    //     position: absolute;
+    //     width: 40%;
+    //     height: 10px;
+    //     content: ' ';
+    //     left: 12px;
+    //     bottom: 12px;
+    //     background: transparent;
+    //     -webkit-transform: skew(-5deg) rotate(-5deg);
+    //     -moz-transform: skew(-5deg) rotate(-5deg);
+    //     -ms-transform: skew(-5deg) rotate(-5deg);
+    //     -o-transform: skew(-5deg) rotate(-5deg);
+    //     transform: skew(-5deg) rotate(-5deg);
+    //     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    //     -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    //     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    //     z-index: -1;
+    // &:after
+    //     left: auto;
+    //     right: 12px;
+    //     -webkit-transform: skew(5deg) rotate(5deg);
+    //     -moz-transform: skew(5deg) rotate(5deg);
+    //     -ms-transform: skew(5deg) rotate(5deg);
+    //     -o-transform: skew(5deg) rotate(5deg);
+    //     transform: skew(5deg) rotate(5deg);
+        
