--- a/source/styles/mixins.styl
+++ b/source/styles/mixins.styl
@@ -1,4 +1,8 @@
 vhidden()
     position: absolute
     left: -9999px
-    
+
+tags-color-in-prop(prop, alpha = 1)
+    for tag, i in tags
+        {'.tag.' + tag[0]}
+            {prop}: rgba(tag[1], alpha)
