--- a/source/styles/variables.styl
+++ b/source/styles/variables.styl
@@ -4,6 +4,6 @@ font-default  = "Helvetica Neue", "Helvetica", Arial, sans-serif
 // colors
 color-default = #5B323E
 
-// category colors
-categories    = man #8B93B2, woman #E06C76, geek #FCAC24, culture #91517D, sport #6ABB8B, house #999999
+// tags colors
+tags          = man #8B93B2, woman #E06C76, geek #FCAC24, culture #91517D, sport #6ABB8B, house #999999
 
