All the corners

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -66,7 +66,7 @@ body {
   width: 960px;
   margin: 0 auto;
   background: #f5f5f5;
-  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
   color: #5b323e;
 }
 .tag.man {
@@ -197,53 +197,6 @@ nav {
   text-decoration: none;
   position: relative;
 }
-.gift .photo {
-  background: #fff;
-  position: relative;
-  border-top: 5px solid #fff;
-  -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.05);
-  box-shadow: 1px 1px 2px rgba(0,0,0,0.05);
-  border-bottom-right-radius: 42px;
-}
-.gift .photo img {
-  width: 100%;
-  border-bottom-right-radius: 42px;
-  margin-bottom: 5px;
-}
-.gift .photo:before {
-  content: '';
-  width: 25px;
-  height: 20px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  border-bottom-right-radius: 24px;
-  -webkit-box-shadow: -2px -2px 5px rgba(0,0,0,0.1);
-  box-shadow: -2px -2px 5px rgba(0,0,0,0.1);
-  -webkit-transform: rotate(-20deg) skew(-40deg, -3deg) translate(-8px, -8px);
-  -moz-transform: rotate(-20deg) skew(-40deg, -3deg) translate(-8px, -8px);
-  -o-transform: rotate(-20deg) skew(-40deg, -3deg) translate(-8px, -8px);
-  -ms-transform: rotate(-20deg) skew(-40deg, -3deg) translate(-8px, -8px);
-  transform: rotate(-20deg) skew(-40deg, -3deg) translate(-8px, -8px);
-}
-.gift .photo:after {
-  content: '';
-  z-index: -1;
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background: rgba(0,0,0,0.2);
-  display: inline-block;
-  -webkit-box-shadow: 20px 20px 8px rgba(0,0,0,0.08);
-  box-shadow: 20px 20px 8px rgba(0,0,0,0.08);
-  -webkit-transform: rotate(0deg) translate(-45px, -20px) skew(20deg);
-  -moz-transform: rotate(0deg) translate(-45px, -20px) skew(20deg);
-  -o-transform: rotate(0deg) translate(-45px, -20px) skew(20deg);
-  -ms-transform: rotate(0deg) translate(-45px, -20px) skew(20deg);
-  transform: rotate(0deg) translate(-45px, -20px) skew(20deg);
-}
 .gift .description,
 .gift .vendor {
   margin-top: 8px;
@@ -368,6 +321,104 @@ nav {
 }
 .gift:hover .tag.house:hover {
   background: #999;
+}
+.photo {
+  background: #fff;
+  position: relative;
+  border-top: 5px solid #fff;
+  border-bottom: 5px solid #fff;
+  -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+}
+.photo img {
+  width: 100%;
+}
+.photo:before,
+.photo:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  width: 50%;
+  height: 100px;
+  bottom: 6px;
+  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+}
+.photo:before {
+  right: 10px;
+  -webkit-transform: rotate(5deg) skew(5deg);
+  -moz-transform: rotate(5deg) skew(5deg);
+  -o-transform: rotate(5deg) skew(5deg);
+  -ms-transform: rotate(5deg) skew(5deg);
+  transform: rotate(5deg) skew(5deg);
+}
+.photo:after {
+  left: 10px;
+  -webkit-transform: rotate(-5deg) skew(-5deg);
+  -moz-transform: rotate(-5deg) skew(-5deg);
+  -o-transform: rotate(-5deg) skew(-5deg);
+  -ms-transform: rotate(-5deg) skew(-5deg);
+  transform: rotate(-5deg) skew(-5deg);
+}
+.corner-bottom-right {
+  border-bottom-right-radius: 36px;
+}
+.corner-bottom-right img {
+  border-bottom-right-radius: 36px;
+}
+.corner-bottom-right:before {
+  bottom: 1px;
+  right: 3px;
+  width: 16px;
+  height: 12px;
+  z-index: 0;
+  -webkit-box-shadow: -2px -1px 1px rgba(0,0,0,0.1);
+  box-shadow: -2px -1px 1px rgba(0,0,0,0.1);
+  -webkit-transform: rotate(-16deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  -moz-transform: rotate(-16deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  -o-transform: rotate(-16deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  -ms-transform: rotate(-16deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  transform: rotate(-16deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+}
+.corner-top-right {
+  border-top-right-radius: 36px;
+}
+.corner-top-right img {
+  border-top-right-radius: 36px;
+}
+.corner-top-right:before {
+  top: 1px;
+  right: 3px;
+  width: 16px;
+  height: 12px;
+  z-index: 0;
+  -webkit-box-shadow: -2px -1px 1px rgba(0,0,0,0.1);
+  box-shadow: -2px -1px 1px rgba(0,0,0,0.1);
+  -webkit-transform: rotate(-106deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  -moz-transform: rotate(-106deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  -o-transform: rotate(-106deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  -ms-transform: rotate(-106deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  transform: rotate(-106deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+}
+.corner-bottom-left {
+  border-bottom-left-radius: 36px;
+}
+.corner-bottom-left img {
+  border-bottom-left-radius: 36px;
+}
+.corner-bottom-left:after {
+  bottom: 1px;
+  left: 3px;
+  width: 16px;
+  height: 12px;
+  z-index: 0;
+  -webkit-box-shadow: -2px -1px 1px rgba(0,0,0,0.1);
+  box-shadow: -2px -1px 1px rgba(0,0,0,0.1);
+  -webkit-transform: rotate(76deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  -moz-transform: rotate(76deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  -o-transform: rotate(76deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  -ms-transform: rotate(76deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
+  transform: rotate(76deg) skew(-40deg, -3deg) translate3d(0, 0, 0);
 }
 @-moz-viewport {
   width: device-width;
