--- a/source/styles/main.styl
+++ b/source/styles/main.styl
@@ -73,72 +73,5 @@ nav
 #content
     clear: both
 
-.gift
-    column: 4
-    position: relative
-    .product
-        color: color-default
-        display: block
-        text-decoration: none
-        position: relative
-    .photo
-        background: white
-        position: relative
-        img
-            width: 100%
-    .description, .vendor
-        margin-top: 8px        
-    .description
-        display: inline-block
-    .vendor
-        float: right
-    .store
-        hide-text()
-        display: inline-block
-        width: 16px
-        height: 16px
-        margin-right: 2px
-        &.thinkgeek
-            background: url('../images/vendors/thinkgeek.png')
-    .price
-        display: inline-block
-        font-weight: 700
-
-    .tags
-        position: absolute
-        top: 4px
-        left: 4px
-        li
-            float: left
-            margin-right: 3px
-    .tag
-        font-size: 0
-        line-height: 0
-        display: block
-        width: 6px
-        height: 6px
-        overflow: hidden
-        text-decoration: none
-
-    tags-color-in-prop(background)
-
-    &:hover
-        .product
-            z-index: 100
-        .tags
-            transition: top .1s ease-out
-            top: -28px
-            left: 0
-
-        .tag
-            transition: height .1s ease-out
-            height: 28px
-            width: auto
-            line-height: 28px
-            font-size: 1em
-            padding: 0 10px
-            &:hover
-                color: white
-
-        tags-color-in-prop(background, .2)
-        tags-color-in-prop(background, 1, ':hover')
+@import 'gift.styl'
+@import 'gift-photo.styl'
