--- a/source/styles/variables.styl
+++ b/source/styles/variables.styl
@@ -1,9 +1,14 @@
+
 // fonts
-font-default  = "Helvetica Neue", "Helvetica", Arial, sans-serif
+font-default  = 'Helvetica Neue', 'Helvetica', Arial, sans-serif
 
 // colors
 color-default = #5B323E
 
 // tags colors
-tags          = man #8B93B2, woman #E06C76, geek #FCAC24, culture #91517D, sport #6ABB8B, house #999999
-
+tags          = man      #8B93B2, 
+                woman    #E06C76, 
+                geek     #FCAC24, 
+                culture  #91517D, 
+                sport    #6ABB8B, 
+                house    #999999
