--- a/source/styles/gift.styl
+++ b/source/styles/gift.styl
@@ -8,19 +8,16 @@
         position: relative
 
     .description, .vendor
-        margin-top: 8px        
+        margin-top: 10px        
     .description
         display: inline-block
+    
     .vendor
         float: right
+    .store, .price
+        vertical-align: top
     .store
-        hide-text()
-        display: inline-block
-        width: 16px
-        height: 16px
         margin-right: 2px
-        &.thinkgeek
-            background: url('../images/vendors/thinkgeek.png')
     .price
         display: inline-block
         font-weight: 700
