--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -151,7 +151,7 @@ header h1 {
   margin-right: 1.0416666666666665%;
   height: 100px;
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
   text-indent: 101%;
   white-space: nowrap;
   overflow: hidden;
@@ -172,7 +172,7 @@ header .tag {
   font-size: 1.3em;
 }
 header .share {
-  margin-top: 20px;
+  margin-top: 15px;
   float: right;
 }
 header .share li {
@@ -199,7 +199,7 @@ nav {
 }
 .gift .description,
 .gift .vendor {
-  margin-top: 8px;
+  margin-top: 10px;
 }
 .gift .description {
   display: inline-block;
@@ -207,17 +207,12 @@ nav {
 .gift .vendor {
   float: right;
 }
-.gift .store {
-  text-indent: 101%;
-  white-space: nowrap;
-  overflow: hidden;
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin-right: 2px;
+.gift .store,
+.gift .price {
+  vertical-align: top;
 }
-.gift .store.thinkgeek {
-  background: url("../images/vendors/thinkgeek.png");
+.gift .store {
+  margin-right: 2px;
 }
 .gift .price {
   display: inline-block;
@@ -340,12 +335,12 @@ nav {
   z-index: -1;
   width: 50%;
   height: 100px;
-  bottom: 6px;
-  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+  bottom: 8px;
+  -webkit-box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+  box-shadow: 0 6px 20px rgba(0,0,0,0.15);
 }
 .photo:before {
-  right: 10px;
+  right: 13px;
   -webkit-transform: rotate(5deg) skew(5deg);
   -moz-transform: rotate(5deg) skew(5deg);
   -o-transform: rotate(5deg) skew(5deg);
@@ -353,7 +348,7 @@ nav {
   transform: rotate(5deg) skew(5deg);
 }
 .photo:after {
-  left: 10px;
+  left: 13px;
   -webkit-transform: rotate(-5deg) skew(-5deg);
   -moz-transform: rotate(-5deg) skew(-5deg);
   -o-transform: rotate(-5deg) skew(-5deg);
@@ -366,7 +361,8 @@ nav {
 .corner-bottom-right img {
   border-bottom-right-radius: 36px;
 }
-.corner-bottom-right:before {
+.corner-bottom-right:after {
+  left: auto;
   bottom: 1px;
   right: 3px;
   width: 16px;
@@ -387,6 +383,7 @@ nav {
   border-top-right-radius: 36px;
 }
 .corner-top-right:before {
+  left: auto;
   top: 1px;
   right: 3px;
   width: 16px;
@@ -407,6 +404,7 @@ nav {
   border-bottom-left-radius: 36px;
 }
 .corner-bottom-left:after {
+  left: auto;
   bottom: 1px;
   left: 3px;
   width: 16px;
